L06-Added internal style for applet container

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <title>Event Driven Programming</title>
+    <style>
+        .applet-flex-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 2rem;
+            width: 55%;
+        }
+
+        .applet-flex-container>div {
+            margin-left: .5rem;
+        }
+
+        .title {
+            margin-top: 1rem;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
