--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                         Applets
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="applet-1.html">Applet 1</a></li>
-                        <li><a class="dropdown-item" href="applet-2.html">Applet 2</a></li>
+                        <li><a class="dropdown-item" href="L06_Applet1.html">Applet 1</a></li>
+                        <li><a class="dropdown-item" href="">Applet 2</a></li>
+                        <li><a class="dropdown-item" href="">Applet 3</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
