--- a/L06_Applet1.html
+++ b/L06_Applet1.html
@@ -10,6 +10,18 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <title>Applet 1 - Basic Events</title>
+    <style>
+        .applet-container {
+            background-color: rgb(192, 255, 213);
+            margin-top: 1rem;
+            margin-left: 2rem;
+            text-align: center;
+            width: 25rem;
+            padding: 10px;
+            border-radius: 30px;
+            box-shadow: 0 0 15px;
+        }
+    </style>
 </head>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
