--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="L06_Applet1.html">Applet 1</a></li>
-                        <li><a class="dropdown-item" href="">Applet 2</a></li>
+                        <li><a class="dropdown-item" href="L07_Applet2.html">Applet 2</a></li>
                         <li><a class="dropdown-item" href="">Applet 3</a></li>
                     </ul>
                 </li>
