--- a/L07_Applet2.html
+++ b/L07_Applet2.html
@@ -13,6 +13,17 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <title>Applet 2 - Leaflet Map</title>
 
+    <style>
+        .applet-container {
+            margin-top: 1rem;
+            margin-left: 2rem;
+            width: 90%;
+        }
+
+        #map {
+            height: 600px;
+        }
+    </style>
 
 </head>
 
@@ -49,6 +60,11 @@
 </nav>
 
 <body>
+    <div class="applet-container">
+        <h3>Leaflet Map Basics</h3>
+        <div id="map"></div>
+
+    </div>
 
 </body>
 
