L07-Added anchor href Applet2.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card-body">
                 <h5 class="card-title">Applet 2 - Leaflet Map</h5>
                 <p class="card-text">This application contains the basic web map</p>
-                <a href="" class="btn btn-primary">Go to Applet</a>
+                <a href="L07_Applet2.html" class="btn btn-primary">Go to Applet</a>
             </div>
         </div>
 
