--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="L06_Applet1.html">Applet 1</a></li>
                         <li><a class="dropdown-item" href="L07_Applet2.html">Applet 2</a></li>
-                        <li><a class="dropdown-item" href="">Applet 3</a></li>
+                        <li><a class="dropdown-item" href="L08_Applet3.html">Applet 3</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -87,7 +87,7 @@
             <div class="card-body">
                 <h5 class="card-title">Applet 3 - Event Logger</h5>
                 <p class="card-text">This application contains the basic event logger</p>
-                <a href="" class="btn btn-primary">Go to Applet</a>
+                <a href="L08_Applet3.html" class="btn btn-primary">Go to Applet</a>
             </div>
         </div>
 
