L08-Added internal style forcontainer

--- a/L08_Applet3.html
+++ b/L08_Applet3.html
@@ -11,6 +11,17 @@
         crossorigin="anonymous"></script>
     <title>Applet 3 - Event Button Logger</title>
 
+    <style>
+        .applet-container {
+            margin-top: 1rem;
+            margin-left: 2rem;
+        }
+
+        .applet-3 {
+            text-align: center;
+        }
+    </style>
+
 </head>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
