--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                         Applets
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="L06_Applet1.html">Applet 1</a></li>
-                        <li><a class="dropdown-item" href="L07_Applet2.html">Applet 2</a></li>
-                        <li><a class="dropdown-item" href="L08_Applet3.html">Applet 3</a></li>
+                        <li><a class="dropdown-item" href="L06-AppletGallery/L06_Applet1.html">Applet 1</a></li>
+                        <li><a class="dropdown-item" href="L07-LeafletMap/L07_Applet2.html">Applet 2</a></li>
+                        <li><a class="dropdown-item" href="L08-EventLogger/L08_Applet3.html">Applet 3</a></li>
+                        <li><a class="dropdown-item" href="L08-EventLogger/L08_Applet3.html">Applet 4</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -69,7 +70,7 @@
             <div class="card-body">
                 <h5 class="card-title">Applet 1 - Basic Events </h5>
                 <p class="card-text">This application contains the basic implementation of DOM events</p>
-                <a href="L06_Applet1.html" class="btn btn-primary">Go to Applet</a>
+                <a href="L06-AppletGallery/L06_Applet1.html" class="btn btn-primary">Go to Applet</a>
             </div>
         </div>
 
@@ -78,16 +79,25 @@
             <div class="card-body">
                 <h5 class="card-title">Applet 2 - Leaflet Map</h5>
                 <p class="card-text">This application contains the basic web map</p>
-                <a href="L07_Applet2.html" class="btn btn-primary">Go to Applet</a>
+                <a href="L07-LeafletMap/L07_Applet2.html" class="btn btn-primary">Go to Applet</a>
             </div>
         </div>
 
-        <!--Applet 2 Card-->
+        <!--Applet 3 Card-->
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Applet 3 - Event Logger</h5>
                 <p class="card-text">This application contains the basic event logger</p>
-                <a href="L08_Applet3.html" class="btn btn-primary">Go to Applet</a>
+                <a href="L08-EventLogger/L08_Applet3.html" class="btn btn-primary">Go to Applet</a>
+            </div>
+        </div>
+
+        <!--Applet 3 Card-->
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Applet 4 - Dynamic Elements</h5>
+                <p class="card-text">This application contains the basic Dynamic Elements</p>
+                <a href="L09-DynamicElements/L09_Applet4.html" class="btn btn-primary">Go to Applet</a>
             </div>
         </div>
 
