--- a/L08-EventLogger/L08_Applet3.html
+++ b/L08-EventLogger/L08_Applet3.html
@@ -26,7 +26,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="../index.html">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,9 +39,10 @@
                         Applets
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="L06_Applet1.html">Applet 1</a></li>
-                        <li><a class="dropdown-item" href="L07_Applet2.html">Applet 2</a></li>
-                        <li><a class="dropdown-item" href="L08_Applet3.html">Applet 3</a></li>
+                        <li><a class="dropdown-item" href="../L06-AppletGallery/L06_Applet1.html">Applet 1</a></li>
+                        <li><a class="dropdown-item" href="../L07-LeafletMap/L07_Applet2.html">Applet 2</a></li>
+                        <li><a class="dropdown-item" href="../L08-EventLogger/L08_Applet3.html">Applet 3</a></li>
+                        <li><a class="dropdown-item" href="../L09-DynamicElements/L09_Applet4.html">Applet 4</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
