--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex" role="search" onsubmit="return false;">
+                <input class="form-control me-2" type="search" id="searchInput" placeholder="Search"
+                    aria-label="Search">
+                <button class="btn btn-outline-success" type="submit" id="searchButton">Search</button>
             </form>
         </div>
     </div>
