L10-Modified codes in the style

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
         .applet-flex-container {
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
+            align-items: center;
             margin-top: 2rem;
-            width: 55%;
+            margin-left: 2rem;
+            width: 100%;
+            align-items: stretch;
         }
 
-        .applet-flex-container>div {
-            margin-left: .5rem;
+        .card {
+            width: 15rem;
+            margin: 0.5rem;
         }
 
         .title {
