L11-Added internal style to design containers and other

--- a/L11-OpenWeather/L11_Applet5.html
+++ b/L11-OpenWeather/L11_Applet5.html
@@ -11,6 +11,23 @@
         crossorigin="anonymous"></script>
     <title>Applet 5 - Openweather</title>
 
+    <style>
+        .applet-container {
+            margin-top: 1rem;
+            margin-left: 2rem;
+        }
+
+        .input-search {
+            margin-left: 3rem;
+            margin-top: 2rem;
+            width: 50%;
+        }
+
+        .weather-card {
+            background: #343434;
+        }
+    </style>
+
 </head>
 
 <body>
