--- a/L06-AppletGallery/L06_Applet1.html
+++ b/L06-AppletGallery/L06_Applet1.html
@@ -43,6 +43,7 @@
                         <li><a class="dropdown-item" href="../L07-LeafletMap/L07_Applet2.html">Applet 2</a></li>
                         <li><a class="dropdown-item" href="../L08-EventLogger/L08_Applet3.html">Applet 3</a></li>
                         <li><a class="dropdown-item" href="../L09-DynamicElements/L09_Applet4.html">Applet 4</a></li>
+                        <li><a class="dropdown-item" href="../L11-OpenWeather/L11_Applet5.html">Applet 5</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
