L12-Added script to call js file

--- a/L12-TodoList/L12_Applet6.html
+++ b/L12-TodoList/L12_Applet6.html
@@ -62,6 +62,8 @@
         </div>
         <ul id="todoList" class="list-group"></ul>
     </div>
+
+    <script src="L12_Applet6.js"></script>
 </body>
 
 </html>
