L12-Added internal style to design the container and others for to do list

--- a/L12-TodoList/L12_Applet6.html
+++ b/L12-TodoList/L12_Applet6.html
@@ -11,6 +11,18 @@
         crossorigin="anonymous"></script>
     <title>Applet 6 - Todo List</title>
 
+    <style>
+        .applet-container {
+            margin-top: 1rem;
+            margin-left: 2rem;
+        }
+
+        .completed {
+            text-decoration: line-through;
+            color: gray;
+        }
+    </style>
+
 </head>
 
 <body>
