L12-Modified files for TodoList

--- a/L11-OpenWeather/L11_Applet5.html
+++ b/L11-OpenWeather/L11_Applet5.html
@@ -53,7 +53,7 @@
                             <li><a class="dropdown-item" href="../L09-DynamicElements/L09_Applet4.html">Applet 4</a>
                             </li>
                             <li><a class="dropdown-item" href="../L11-OpenWeather/L11_Applet5.html">Applet 5</a></li>
-
+                            <li><a class="dropdown-item" href="../L12-TodoList/L12_Applet6.html">Applet 6</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
